Set up php.  Working on testing bugs

--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-  <form action="Database/InsertTask.php" method="post">
+  <form action="Database/test.php" method="post">
     <input type="submit" value="Select">
   </form>
 </body>
